# FlyDetection

./: .gitattributes  LICENSE  README.md  app.py  best.pt  best1.pt  check.py  data.yaml  gui.py  offline_track.py  online_track.py  pyproject.toml  test.py  train.py
coords/: cleaned_tracks_wide.csv
fly_dl/: 范例.avi
fly_dl/GUI/: mainWindow.py
fly_dl/GUI/UI/: mainWindow.ui
fly_dl/core/: detector.py
fly_dl/result/model/weights/: best2.pt
fly_dl/utils/: augment.py  cuda_test.py  train_test_split.py  video_split.py
